fixed darkmode toggle spacing

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -8,6 +8,7 @@
 	height: 0;
 	width: 0;
 	visibility: hidden;
+	position: absolute;
 }
 
 .dm-label {
